<resources>
    <string name="app_name">Food Adda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailFood">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="topline">Top<font color='#FC8019'> #1 </font>Fastest Delivery Food For You</string>
    <string name="american_pasta">American Pasta</string>
    <string name="quantity">Quantity :</string>
    <string name="_1">1</string>
    <string name="order_id">Order Id :</string>
    <string name="_250">₹ 250</string>
    <string name="special">Special</string>
    <string name="_4_3">4.3</string>
    <string name="paid_delivery">Paid Delivery</string>
    <string name="total_bill_payment">Total Bill Payment</string>
    <string name="search_food">Search Food</string>
    <string name="popular_this_week">Popular This Week</string>
    <string name="food_adda">Food Adda</string>
    <string name="all_menu_items">All Menu Items</string>
    <string name="american_pizaa">American Pizaa</string>
    <string name="_4_5">4.5</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="order_food_to_get_delivery_in_the_fastest_time_in_your_town">Order Food To get delivery in the Fastest Time in Your Town</string>
    <string name="get_started">Get Started</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_profile">Save Profile</string>
    <string name="pasta">Pasta</string>
</resources>