<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DashboardFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/food_adda"
        android:textColor="@color/light_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/igCartHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/bag"
        android:contentDescription="@string/american_pasta"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/txAddHomeCartItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/_1"
        android:textColor="@color/orange"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/igCartHome"
        app:layout_constraintEnd_toEndOf="@+id/igCartHome" />


    <EditText
        android:id="@+id/edSearch"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:autofillHints="true"
        android:background="@drawable/search_bg"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="16dp"
        android:fontFamily="serif"
        android:hint="@string/search_food"
        android:inputType="text"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/igCartHome"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/popular_this_week"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvpopularItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView

        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/all_menu_items"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/rvpopularItems" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllMenuItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>
