<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddCartFragment">

    <ImageView
        android:id="@+id/igBackAddCartToDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/topline"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/igBackAddCartToDashboard" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txTotalItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/_250"
            android:textColor="@color/orange"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCartBillPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/itemimage_bg"
            android:padding="15dp"
            android:text="@string/total_bill_payment" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>